--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - score   # ajoute ici toutes les branches où tu fais des commits
+      - score
 
 jobs:
   update-version:
@@ -27,4 +27,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add version.json
           git commit -m "Update version.json [skip ci]" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
